ags (0.7.83)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential infinite-loop
	* fixed race-condition as resizing audio channels and pads within gui thread

ags (0.7.82)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_playable_read_audio_signal() without resampling frame count

ags (0.7.81)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed not negated if condition in ags_ladspa_manager_get_filenames()
	* fixed non-synth lv2 plugins accessing NULL pointer ags-count-beats recall
	* fixed potential NULL pointer access in ags_recall_lv2_run_finalize()
	* fixed AgsRecallLv2Run to have :run-inter() for non-synths
	* fixed AgsRecallLadpsaRun, AgsRecallDssiRun and AgsRecallLv2Run to use correct copy mode
	* implemented ags_audio_buffer_util_clear_buffer()

ags (0.7.80)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restore of AgsBulkMember toggle button

ags (0.7.79)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential NULL pointer access in ags_recycling_create_audio_signal_with_frame_count()

ags (0.7.78)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_file_write() to have additional format parameter
	* fixed potential NULL pointer in ags_audio_file_write()

ags (0.7.77)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsCellPattern to shrink vertical scrollbar in AgsMatrix
	* fixed AgsMidiDialog reset
	* improved clear JACK buffer during no playback

ags (0.7.76)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed sample selection of AgsIpatch
	* improved open multi-channel samples in ags_ffplayer_callbacks.c

ags (0.7.75)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed synth generator
	* fixed ags_recall_find_all_type()

ags (0.7.74)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]